# precision2usb

./: .cproject  .gitignore  .project  f1-rtos-usb.elf (1).launch  f1-rtos-usb.elf.cfg  f1-rtos-usb.elf.launch  stm32f103xc.ld
Inc/boot/: rtos_init.h
Inc/i2c/: adc.h  i2c.h
Inc/rtos/: FreeRTOSConfig.h
Inc/termio/: termio.h
Inc/usb/: hid.h  hid_constants.h  io.h  usb_hid_cdc.h
Src/: sysmem.c
Src/boot/: main.c  rtos_init.c
Src/i2c/: adc.c  i2c-bitbang.c  i2c-task.c
Src/termio/: termlib.c
Src/usb/: usb_hid_cdc.c
hid-parser/parser/inc/: ast.h  parser.h  tokenizer.h
hid-parser/parser/src/: ast.c  parser.c  tokenizer.c
hid-parser/precision/inc/: precision.h
hid-parser/precision/src/: precision.c
hid-parser/util/inc/: util.h
hid-parser/util/src/: util.c
unix/: CMakeLists.txt  Makefile  main.c
unix/port/: FreeRTOS.h  fileio.c  fileio.h
